--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,9 @@
     "react-native/no-color-literals": "off",
     "react-native/sort-styles": "off",
     "global-require": "off",
-    "react-native/no-raw-text": "off"
+    "react-native/no-raw-text": "off",
+    "react/forbid-prop-types": "off",
+    "react/require-default-props": "off"
   },
   "settings": {
     "import/resolver": {
